--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/MVCHomework6.styles.css" asp-append-version="true" />
+    @if (IsSectionDefined("Head"))
+    {
+        @await RenderSectionAsync("Head")
+    }
+    else
+    {
+        
+    }
+
 </head>
 <body>
 <header>
