--- a/Areas/CreateBlog/Views/Create/Index.cshtml
+++ b/Areas/CreateBlog/Views/Create/Index.cshtml
@@ -33,7 +33,8 @@
             </div>
             <div class="row mb-2">
                 <label asp-for=CreateDate></label>
-                <input asp-for=CreateDate class="form-control create-date" data-value="@DateTime.Now.ToString("yyyy/MM/dd")" />
+                @Html.EditorFor(m => m.CreateDate)
+                @*<input asp-for=CreateDate class="form-control create-date" data-value="@DateTime.Now.ToString("yyyy/MM/dd")" />*@
                 <span asp-validation-for=CreateDate class="form-text text-danger"></span>
             </div>
             <div class="row mb-2">
