創建部落格，標籤雲可添加新標籤

--- a/Areas/CreateBlog/Views/Create/Index.cshtml
+++ b/Areas/CreateBlog/Views/Create/Index.cshtml
@@ -62,7 +62,10 @@
             format: "yyyy/mm/dd"
         });
         $(document).ready(function() {
-            $('.js-example-basic-multiple').select2();
+            $('.js-example-basic-multiple').select2({
+                tags: true,
+                tokenSeparators: [',', ' ']
+            });
         });
     </script>
 }
