增加Model為空判斷

--- a/Views/Home/_TagList.cshtml
+++ b/Views/Home/_TagList.cshtml
@@ -8,10 +8,13 @@
 @model string
 
 <ul class="p-0">
-    @foreach (var item in Model.Split(","))
+    @if (Model.Any())
     {
-        <li class="d-inline pe-2">
-            <a asp-action="Index" asp-controller="Home" asp-area="" asp-route-tag="@item">@item</a>
-        </li>
+        @foreach (var item in Model.Split(","))
+        {
+            <li class="d-inline pe-2">
+                <a asp-action="Index" asp-controller="Home" asp-area="" asp-route-tag="@item">@item</a>
+            </li>
+        }
     }
 </ul>
